<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title=
            "@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_baseline_add_box_24"
        android:title="@string/post" />

    <item
        android:id="@+id/navigation_like"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/activitys" />

    <item android:id="@+id/navigation_user"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/user"
        />

</menu>