<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.cloneinstagram.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.cloneinstagram.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.cloneinstagram.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@id/navigation_like"
        android:name="com.example.cloneinstagram.ui.activitys.ActivityFragment"
        android:label="Activitys"
        tools:layout="@layout/activity_fragment"/>
    <fragment
        android:id="@+id/navigation_user"
        android:name="com.example.cloneinstagram.ui.user.UserFragment"
        android:label="navigation_user"
        tools:layout="@layout/user_fragment" />


</navigation>